#
# Create the utils directory
#
set(SOURCES mlog2.c)
#
# Create the mdhim library
#
file(GLOB LIBMDHIMUTILS_SOURCES *.c *.cpp)
list(FILTER LIBMDHIMUTILS_SOURCES EXCLUDE REGEX ".*/elen.cpp")
MESSAGE( STATUS "LIBMDHIMUTILS_SOURCES: " ${LIBMDHIMUTILS_SOURCES})
MESSAGE( STATUS "INCLUDE_DIRECTORIES: " ${INCLUDE_DIRECTORIES})
add_library(utils STATIC ${LIBMDHIMUTILS_SOURCES})
INSTALL(TARGETS utils DESTINATION lib)
INSTALL(FILES mlog2.h mlogfacs2.h uthash.h DESTINATION include/mdhim)
